SET(drishti_SOURCES 
  boundingbox.cpp 
  blendshaderfactory.cpp 
  brickinformation.cpp 
  bricks.cpp 
  brickswidget.cpp
  camerapathnode.cpp
  captions.cpp
  captiondialog.cpp
  captiongrabber.cpp
  captionobject.cpp
  classes.cpp 
  colorbar.cpp
  colorbargrabber.cpp 
  colorbarobject.cpp 
  clipinformation.cpp
  clipplane.cpp
  clipobject.cpp 
  clipgrabber.cpp
  coloreditor.cpp
  crops.cpp 
  cropobject.cpp
  cropgrabber.cpp
  cropshaderfactory.cpp
  dcolordialog.cpp
  dcolorwheel.cpp 
  doublespinboxdelegate.cpp
  dialogs.cpp
  directionvectorwidget.cpp
  drawhiresvolume.cpp 
  drawlowresvolume.cpp
  fileslistdialog.cpp 
  geometryobjects.cpp 
  geoshaderfactory.cpp
  gilightgrabber.cpp
  gilightobject.cpp
  gilights.cpp
  gilightinfo.cpp
  gilightobjectinfo.cpp
  glewinitialisation.cpp 
  global.cpp 
  glowshaderfactory.cpp 
  gradienteditor.cpp 
  gradienteditorwidget.cpp 
  grids.cpp 
  gridgrabber.cpp 
  gridobject.cpp 
  hitpoints.cpp 
  hitpointgrabber.cpp 
  imagecaptiongrabber.cpp
  imagecaptionobject.cpp
  imagecaptions.cpp
  keyframe.cpp 
  keyframeeditor.cpp 
  keyframeinformation.cpp 
  landmarkinformation.cpp
  landmarks.cpp
  lightdisc.cpp 
  lighthandler.cpp
  lightinginformation.cpp 
  lightingwidget.cpp 
  lightshaderfactory.cpp
  load2volumes.cpp 
  load3volumes.cpp 
  load4volumes.cpp 
  main.cpp 
  mainwindow.cpp 
  mainwindowui.cpp 
  matrix.cpp 
  messagedisplayer.cpp 
  mymanipulatedframe.cpp 
  networkinformation.cpp 
  networks.cpp 
  networkgrabber.cpp 
  networkobject.cpp 
  opacityeditor.cpp 
  paintball.cpp 
  propertyeditor.cpp 
  pathobject.cpp 
  pathgrabber.cpp 
  paths.cpp 
  pathgroups.cpp 
  pathgroupobject.cpp 
  pathgroupgrabber.cpp 
  pathshaderfactory.cpp 
  ply.c 
  pluginthread.cpp 
  preferenceswidget.cpp 
  profileviewer.cpp 
  prunehandler.cpp 
  pruneshaderfactory.cpp 
  rawvolume.cpp 
  saveimageseqdialog.cpp 
  savemoviedialog.cpp 
  scalebar.cpp 
  scalebargrabber.cpp 
  scalebarobject.cpp 
  shaderfactory.cpp 
  shaderfactory2.cpp 
  shaderfactoryrgb.cpp 
  splineeditor.cpp 
  splineeditorwidget.cpp 
  splineinformation.cpp 
  splinetransferfunction.cpp 
  staticfunctions.cpp 
  tagcoloreditor.cpp 
  tearshaderfactory.cpp 
  tick.cpp 
  transferfunctioncontainer.cpp 
  transferfunctioneditorwidget.cpp 
  transferfunctionmanager.cpp 
  trisetinformation.cpp 
  trisets.cpp 
  trisetgrabber.cpp 
  trisetobject.cpp 
  videoplayer.cpp
  viewer.cpp 
  viewinformation.cpp 
  viewseditor.cpp 
  volume.cpp 
  volumebase.cpp 
  volumeinformation.cpp 
  volumeinformationwidget.cpp 
  volumefilemanager.cpp 
  volumesingle.cpp 
  volumergbbase.cpp 
  volumergb.cpp 
  xmlheaderfunctions.cpp 
  16bit/remaphistogramline.cpp 
  16bit/remaphistogramwidget.cpp 
  itksegmentation.cpp)

SET(drishti_HEADERS 
  boundingbox.h 
  blendshaderfactory.h 
  brickinformation.h 
  bricks.h 
  brickswidget.h 
  camerapathnode.h 
  captions.h 
  captiondialog.h 
  captiongrabber.h 
  captionobject.h 
  colorbar.h 
  colorbargrabber.h 
  colorbarobject.h 
  commonqtclasses.h
  classes.h 
  clipinformation.h 
  clipplane.h 
  clipobject.h 
  clipgrabber.h 
  coloreditor.h 
  connectbricks.h 
  connectbrickswidget.h 	
  connectclipplanes.h 
  connectgeometryobjects.h 
  connecthires.h 
  connectkeyframe.h 
  connectkeyframeeditor.h 
  connectlightingwidget.h 
  connectpreferences.h 
  connectshowmessage.h 
  connecttfeditor.h 
  connecttfmanager.h 
  connectviewer.h 
  connectviewseditor.h 
  connectvolinfowidget.h 
  crops.h 
  cropobject.h 
  cropgrabber.h 
  cropshaderfactory.h 
  dcolordialog.h 
  dcolorwheel.h 
  doublespinboxdelegate.h 
  dialogs.h 
  directionvectorwidget.h 
  drawhiresvolume.h 
  drawlowresvolume.h 
  enums.h 
  fileslistdialog.h   
  geometryobjects.h 
  geoshaderfactory.h 
  gilightgrabber.h
  gilightobject.h
  gilights.h
  gilightinfo.h
  gilightobjectinfo.h
  glewinitialisation.h 
  global.h 
  glowshaderfactory.h 
  gradienteditor.h 
  gradienteditorwidget.h 
  grids.h 
  gridgrabber.h 
  gridobject.h 
  hitpoints.h 
  hitpointgrabber.h 
  imagecaptiongrabber.h
  imagecaptionobject.h
  imagecaptions.h
  keyframe.h 
  keyframeeditor.h 
  keyframeinformation.h
  landmarkinformation.h
  landmarks.h
  lightdisc.h 
  lighthandler.h
  lightinginformation.h 
  lightingwidget.h 
  lightshaderfactory.h
  load2volumes.h 
  load3volumes.h 
  load4volumes.h 
  mainwindow.h 
  mainwindowui.h 
  matrix.h 
  messagedisplayer.h 
  mymanipulatedframe.h 
  networkinformation.h 
  networks.h 
  networkgrabber.h 
  networkobject.h 
  opacityeditor.h 
  paintball.h 
  propertyeditor.h 
  pathobject.h 
  pathgrabber.h 
  paths.h 
  pathgroups.h 
  pathgroupobject.h 
  pathgroupgrabber.h 
  pathshaderfactory.h 
  ply.h 
  plugininterface.h 
  pluginthread.h 
  preferenceswidget.h 
  profileviewer.h 
  prunehandler.h 
  pruneshaderfactory.h 
  rawvolume.h 
  saveimageseqdialog.h 
  savemoviedialog.h 
  scalebar.h 
  scalebargrabber.h 
  scalebarobject.h 
  shaderfactory.h 
  shaderfactory2.h 
  shaderfactoryrgb.h 
  splineeditor.h 
  splineeditorwidget.h 
  splineinformation.h 
  splinetransferfunction.h 
  staticfunctions.h 
  tagcoloreditor.h 
  tearshaderfactory.h 
  tick.h 
  transferfunctioncontainer.h 
  transferfunctioneditorwidget.h 
  transferfunctionmanager.h 
  trisetinformation.h 
  trisets.h 
  trisetgrabber.h 
  trisetobject.h 
  videoplayer.h
  viewer.h 
  viewinformation.h 
  viewseditor.h 
  volume.h 
  volumebase.h 
  volumeinformation.h 
  volumeinformationwidget.h 
  volumefilemanager.h 
  volumesingle.h 
  volumergbbase.h 
  volumergb.h 
  xmlheaderfunctions.h 
  16bit/remaphistogramline.h 
  16bit/remaphistogramwidget.h 
  mopplugininterface.h 
  itksegmentation.h)

SET(drishti_FORMS
  mainwindow.ui 
  saveimgseq.ui 
  savemovie.ui 
  brickswidget.ui 
  captiondialog.ui 
  directionvectorwidget.ui 
  fileslistdialog.ui 
  lightingwidget.ui 
  load2volumes.ui 
  load3volumes.ui 
  load4volumes.ui 
  preferenceswidget.ui 
  propertyeditor.ui 
  profileviewer.ui 
  viewseditor.ui 
  volumeinformation.ui)

SET(drishti_RESOURCES drishti.qrc)

QT5_WRAP_CPP(drishti_HEADERS_MOC ${drishti_HEADERS})
QT5_WRAP_UI(drishti_FORMS_HEADERS ${drishti_FORMS})
QT5_ADD_RESOURCES(drishti_RESOURCES_RCC ${drishti_RESOURCES})

ADD_EXECUTABLE( drishti 
    ${drishti_SOURCES} 
    ${drishti_HEADERS_MOC}
    ${drishti_FORMS_HEADERS} 
    ${drishti_RESOURCES_RCC})
TARGET_LINK_LIBRARIES(drishti 
   ${QGLVIEWER_LIBRARIES}
   ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${GLEW_LIBRARY}
   ${NETCDF_LIBRARIES_CXX})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}
                    ${PROJECT_SOURCE_DIR}/drishti/16bit )

qt5_use_modules(drishti Widgets Xml OpenGL Network Multimedia MultimediaWidgets)


ADD_SUBDIRECTORY(plugins)
#ADD_SUBDIRECTORY(mopplugin)

INSTALL (TARGETS drishti DESTINATION ${BIN_INSTALL_DIR})





