INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/tools/import)

ADD_SUBDIRECTORY(analyze)
ADD_SUBDIRECTORY(dicom)
ADD_SUBDIRECTORY(grd)
ADD_SUBDIRECTORY(hdf4)
ADD_SUBDIRECTORY(imagestack)
ADD_SUBDIRECTORY(metaimage)
ADD_SUBDIRECTORY(nc)
#ADD_SUBDIRECTORY(nifti)
#ADD_SUBDIRECTORY(nrrd)
ADD_SUBDIRECTORY(raw)
ADD_SUBDIRECTORY(rawslabs)
ADD_SUBDIRECTORY(rawslices)
ADD_SUBDIRECTORY(tiff)
ADD_SUBDIRECTORY(tom)
ADD_SUBDIRECTORY(vgi)
